# aws-backend-template

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml  docker-image.yml  ecr-image.yml
app/: main.py  settings.py
app/cli/: cli_app.py
app/router/: status_routes.py
app/utils/: dttm.py
scripts/: build_image.sh  entrypoint.sh  install.sh  setup_venv.sh  upgrade.sh
