[project]
name = "backend"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"
authors = [
  {name = "Team", email = "team@team.com"}
]

dependencies = [
  "black",
  "fastapi",
  "httpx",
  "mypy",
  "pendulum",
  "phidata==1.0.0.dev6",
  "pre-commit",
  "pytest",
  "rich",
  "ruff",
  "typer",
  "uvicorn[standard]",
]

[project.scripts]
app = "app.cli.cli_app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
exclude = [
  ".venv*",
]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [
  ".venv*",
]

[[tool.mypy.overrides]]
module = [
  # "fastapi.*",
  "phidata.*",
  "setuptools.*",
  # "starlette.*",
  # "uvicorn.*",
]
ignore_missing_imports = true
